--- a/electron/index.html
+++ b/electron/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 <body style="background: white;">
-    <script src="../lib/time-calc/index.js"></script>
+    <script src="index.js"></script>
     <div><input type="text" id="textInput">=<span id="result"></span></div>
     <script>
+        var resultElement = document.getElementById("result");
         document.getElementById("textInput").addEventListener("input",function () {
-            console.log("hi");
+            resultElement.textContent = window.timeCalc(this.value);
         });
     </script>
 </body>
